--- a/posts/visualisation.ipynb
+++ b/posts/visualisation.ipynb
@@ -3,9 +3,13 @@
     {
       "cell_type": "raw",
       "id": "ab9c8635-2090-44a0-946c-d79eeebd98c4",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "raw"
+        }
+      },
       "source": [
-        "Title"
+        "Pygal: Elegant and Interactive Data Visualization in Python"
       ]
     },
     {
