--- a/posts/visualisation.ipynb
+++ b/posts/visualisation.ipynb
@@ -1,7 +1,7 @@
 {
   "cells": [
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "id": "ab9c8635-2090-44a0-946c-d79eeebd98c4",
       "metadata": {
         "vscode": {
@@ -9,15 +9,19 @@
         }
       },
       "source": [
-        "Pygal: Elegant and Interactive Data Visualization in Python"
+        "# Pygal: Elegant and Interactive Data Visualization in Python"
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "id": "3d8712e1-45da-4d02-93ce-47368dc9c81c",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "raw"
+        }
+      },
       "source": [
-        "Visualizing Data with Pygal: A Beginner-Friendly Guide to Interactive Graphs in Python"
+        "### Visualizing Data with Pygal: A Beginner-Friendly Guide to Interactive Graphs in Python"
       ]
     },
     {
@@ -29,11 +33,15 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "id": "f3974890-e0f5-464f-b24a-5f844422a507",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "raw"
+        }
+      },
       "source": [
-        "Installation and Setup"
+        "### Installation and Setup"
       ]
     },
     {
@@ -66,11 +74,11 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "id": "6ce491de",
       "metadata": {},
       "source": [
-        "if in jupyter notebooks:"
+        "#### If you are in jupyter notebook:"
       ]
     },
     {
@@ -94,11 +102,15 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "id": "580e56e9",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "raw"
+        }
+      },
       "source": [
-        "Then, configure your notebook:"
+        "#### Then, configure your notebook:"
       ]
     },
     {
@@ -110,15 +122,19 @@
       "source": [
         "from IPython.display import SVG, display\n",
         "def show_svg(svg):\n",
-        "    display(SVG(svg.render()))\n"
+        "    display(SVG(svg.render()))"
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "id": "6b619323-e659-44cd-ba04-4ea02f0357ee",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "raw"
+        }
+      },
       "source": [
-        "Key Features & Explanation:"
+        "### Key Features & Explanation:"
       ]
     },
     {
@@ -148,11 +164,15 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "id": "fb9f0ddf-4f43-491b-9086-3b96d0f30bea",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "raw"
+        }
+      },
       "source": [
-        "Creating Dynamic Charts with Pygal"
+        "### Creating Dynamic Charts with Pygal"
       ]
     },
     {
@@ -185,11 +205,15 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "id": "8b222153-965e-4b56-9ecb-6f58d6e43c09",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "raw"
+        }
+      },
       "source": [
-        "Exporting and Embedding Charts in Pygal"
+        "### Exporting and Embedding Charts in Pygal"
       ]
     },
     {
@@ -219,11 +243,15 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "id": "14146717-a093-495e-b3d4-b80c6454752b",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "raw"
+        }
+      },
       "source": [
-        "Use cases"
+        "### Use cases:"
       ]
     },
     {
@@ -241,14 +269,30 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "id": "aa43c807-e2a5-4687-9b5b-09e55e9108bb",
+      "metadata": {
+        "vscode": {
+          "languageId": "raw"
+        }
+      },
+      "source": [
+        "### Conclusion:"
+      ]
+    },
+    {
+      "cell_type": "raw",
+      "id": "f699281d",
       "metadata": {},
       "source": [
-        "Conclusion:\n",
-        "\n",
         "Pygal is an excellent choice for Python developers seeking quick, interactive, and visually appealing data visualizations. Its SVG output ensures charts look sharp at any size, making them perfect for both web and print. The simplicity of its API combined with a variety of chart types allows you to present data in the most effective and engaging way."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "9c62a8a6",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
