--- a/posts/visualisation.ipynb
+++ b/posts/visualisation.ipynb
@@ -138,29 +138,41 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "id": "ab8633f5-3416-48d4-ba7b-0993f4b39265",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "raw"
+        }
+      },
       "source": [
         "Wide Range of Chart Types: Supports \n",
         "bar: Pygal's Bar chart allows you to plot data for different categories and add multiple series.\n",
         "\n",
-        "line: Line charts are used to display information as a series of data points connected by straight lines.\n",
+        "#####  line: \n",
+        "Line charts are used to display information as a series of data points connected by straight lines.\n",
         "\n",
-        "pie: They're useful for displaying how different parts make up a total.\n",
+        "##### pie: \n",
+        "They're useful for displaying how different parts make up a total.\n",
         "\n",
-        "radar: Radar charts display multivariate data on axes starting from the same point. They are good for comparing multiple variables.\n",
+        "##### radar: \n",
+        "Radar charts display multivariate data on axes starting from the same point. They are good for comparing multiple variables.\n",
         "\n",
-        "box plots: Box plots are used to display the distribution of data based on five summary statistics: minimum, first quartile, median, third quartile, and maximum.\n",
+        "##### box plots: \n",
+        "Box plots are used to display the distribution of data based on five summary statistics: minimum, first quartile, median, third quartile, and maximum.\n",
         "and more.\n",
         "\n",
-        "Interactive SVG Output: Charts are rendered as SVGs, making them scalable and interactive.\n",
+        "##### Interactive SVG Output: \n",
+        "Charts are rendered as SVGs, making them scalable and interactive.\n",
         "\n",
-        "Customizable Styles: Modify colors, labels, and tooltips to suit your needs.\n",
+        "##### Customizable Styles: \n",
+        "Modify colors, labels, and tooltips to suit your needs.\n",
         "\n",
-        "Browser-Friendly: SVG charts can be easily embedded in web pages.\n",
+        "##### Browser-Friendly: \n",
+        "SVG charts can be easily embedded in web pages.\n",
         "\n",
-        "Export Options: Export charts as PNG, PDF, or other formats using additional libraries."
+        "##### Export Options: \n",
+        "Export charts as PNG, PDF, or other formats using additional libraries."
       ]
     },
     {
@@ -287,6 +299,12 @@
       "source": [
         "Pygal is an excellent choice for Python developers seeking quick, interactive, and visually appealing data visualizations. Its SVG output ensures charts look sharp at any size, making them perfect for both web and print. The simplicity of its API combined with a variety of chart types allows you to present data in the most effective and engaging way."
       ]
+    },
+    {
+      "cell_type": "raw",
+      "id": "070808e3",
+      "metadata": {},
+      "source": []
     },
     {
       "cell_type": "markdown",
