--- a/posts/visualisation.ipynb
+++ b/posts/visualisation.ipynb
@@ -301,23 +301,335 @@
       ]
     },
     {
-      "cell_type": "raw",
-      "id": "070808e3",
+      "cell_type": "markdown",
+      "id": "f7eb1437",
       "metadata": {},
-      "source": []
+      "source": [
+        "##### Using matplotlib:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "dd778648",
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mRunning cells with 'Python 3.13.1' requires the ipykernel package.\n",
+            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+            "\u001b[1;31mCommand: 'c:/Users/admin/AppData/Local/Programs/Python/Python313/python3.13t.exe -m pip install ipykernel -U --user --force-reinstall'"
+          ]
+        }
+      ],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "months = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']\n",
+        "product_a = [150, 200, 220, 240, 300, 500, 450, 470, 490, 520, 580, 600]\n",
+        "product_b = [100, 120, 140, 160, 200, 300, 350, 370, 400, 430, 450, 480]\n",
+        "\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "plt.plot(months, product_a, label='Product A', marker='o', linestyle='-', color='blue')\n",
+        "plt.plot(months, product_b, label='Product B', marker='s', linestyle='--', color='orange')\n",
+        "\n",
+        "plt.title('Monthly Sales Data for Product A and Product B', fontsize=16)\n",
+        "plt.xlabel('Month', fontsize=12)\n",
+        "plt.ylabel('Sales', fontsize=12)\n",
+        "plt.legend()\n",
+        "plt.grid(True, linestyle='--', alpha=0.5)\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ]
     },
     {
       "cell_type": "markdown",
-      "id": "9c62a8a6",
+      "id": "cc343462",
       "metadata": {},
-      "source": []
+      "source": [
+        "##### Using pygal:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "2e2e8a6c",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import pygal\n",
+        "\n",
+        "line_chart = pygal.Line()\n",
+        "line_chart.title = 'Monthly Sales Data (2024)'\n",
+        "line_chart.x_labels = map(str, range(1, 13))\n",
+        "line_chart.add('Product A', [150, 200, 220, 240, 300, 500, 450, 470, 490, 520, 580, 600])\n",
+        "line_chart.add('Product B', [100, 120, 140, 160, 200, 300, 350, 370, 400, 430, 450, 480])\n",
+        "line_chart.render_to_file('line_chart.svg')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "853cec0a",
+      "metadata": {},
+      "source": [
+        "##### Using Matplotlib:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "3ce928dd",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "weeks = ['Week 1', 'Week 2', 'Week 3', 'Week 4']\n",
+        "visits = [3000, 4000, 3500, 5000]\n",
+        "\n",
+        "plt.figure(figsize=(8, 5))\n",
+        "plt.bar(weeks, visits, color='skyblue')\n",
+        "\n",
+        "plt.title('Weekly Visits', fontsize=16)\n",
+        "plt.xlabel('Week', fontsize=12)\n",
+        "plt.ylabel('Number of Visits', fontsize=12)\n",
+        "plt.grid(axis='y', linestyle='--', alpha=0.5)\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "f86a0140",
+      "metadata": {},
+      "source": [
+        "##### Using Pygal:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "49bf4b24",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "bar_chart = pygal.Bar()\n",
+        "bar_chart.title = 'Website Visits per Week'\n",
+        "bar_chart.x_labels = ['Week 1', 'Week 2', 'Week 3', 'Week 4']\n",
+        "bar_chart.add('Visits', [3000, 4000, 3500, 5000])\n",
+        "bar_chart.render_to_file('bar_chart.svg')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "2e8ae084",
+      "metadata": {},
+      "source": [
+        "##### Using Matplotlib:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "9b19b332",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "labels = ['Android', 'iOS', 'Others']\n",
+        "sizes = [68.3, 30.3, 1.4]\n",
+        "colors = ['#66b3ff', '#ff9999', '#99ff99']\n",
+        "explode = (0.1, 0, 0)\n",
+        "\n",
+        "plt.figure(figsize=(8, 8))\n",
+        "plt.pie(sizes, labels=labels, colors=colors, autopct='%1.1f%%', startangle=140, explode=explode, shadow=True)\n",
+        "\n",
+        "plt.title('Market Share of Mobile OS', fontsize=16)\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "2286e8c7",
+      "metadata": {},
+      "source": [
+        "##### Using Pygal:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "e51ced7e",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import pygal\n",
+        "\n",
+        "pie_chart = pygal.Pie()\n",
+        "pie_chart.title = 'Market Share of Mobile OS'\n",
+        "\n",
+        "pie_chart.add('Android', 68.3)\n",
+        "pie_chart.add('iOS', 30.3)\n",
+        "pie_chart.add('Others', 1.4)\n",
+        "\n",
+        "pie_chart.render_to_file('pie_chart.svg')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "236ce7cb",
+      "metadata": {},
+      "source": [
+        "##### Using Matplotlib:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "06ea9df3",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "\n",
+        "labels = ['Python', 'Java', 'C++', 'JavaScript', 'SQL']\n",
+        "developer_a = [80, 65, 70, 90, 85]\n",
+        "developer_b = [60, 75, 85, 80, 70]\n",
+        "\n",
+        "angles = np.linspace(0, 2 * np.pi, len(labels), endpoint=False).tolist()\n",
+        "developer_a += developer_a[:1]\n",
+        "developer_b += developer_b[:1]\n",
+        "angles += angles[:1]\n",
+        "\n",
+        "fig, ax = plt.subplots(figsize=(8, 8), subplot_kw=dict(polar=True))\n",
+        "\n",
+        "ax.plot(angles, developer_a, label='Developer A', color='blue', linewidth=2)\n",
+        "ax.fill(angles, developer_a, color='blue', alpha=0.25)\n",
+        "\n",
+        "ax.plot(angles, developer_b, label='Developer B', color='orange', linewidth=2)\n",
+        "ax.fill(angles, developer_b, color='orange', alpha=0.25)\n",
+        "\n",
+        "ax.set_yticks([])\n",
+        "ax.set_xticks(angles[:-1])\n",
+        "ax.set_xticklabels(labels)\n",
+        "\n",
+        "plt.title('Skill Set Comparison', fontsize=16)\n",
+        "ax.legend(loc='upper right', bbox_to_anchor=(1.1, 1.1))\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "934e1f02",
+      "metadata": {},
+      "source": [
+        "##### Using Pygal:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "97103516",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import pygal\n",
+        "\n",
+        "radar_chart = pygal.Radar()\n",
+        "radar_chart.title = 'Skill Set Comparison'\n",
+        "\n",
+        "radar_chart.x_labels = ['Python', 'Java', 'C++', 'JavaScript', 'SQL']\n",
+        "\n",
+        "radar_chart.add('Developer A', [80, 65, 70, 90, 85])\n",
+        "radar_chart.add('Developer B', [60, 75, 85, 80, 70])\n",
+        "radar_chart.render_to_file('radar_chart.svg')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "4903b4bf",
+      "metadata": {},
+      "source": [
+        "#### Using Matplotlib:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "caf09d74",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "scores = {\n",
+        "    'Math': [45, 60, 75, 85, 95],\n",
+        "    'Science': [50, 65, 70, 80, 90],\n",
+        "    'History': [40, 55, 65, 75, 85]\n",
+        "}\n",
+        "\n",
+        "data = [scores['Math'], scores['Science'], scores['History']]\n",
+        "labels = list(scores.keys())\n",
+        "\n",
+        "plt.figure(figsize=(8, 6))\n",
+        "plt.boxplot(data, labels=labels, patch_artist=True,\n",
+        "            boxprops=dict(facecolor='skyblue', color='blue'),\n",
+        "            medianprops=dict(color='red'),\n",
+        "            whiskerprops=dict(color='blue'),\n",
+        "            capprops=dict(color='blue'))\n",
+        "\n",
+        "plt.title('Exam Scores Distribution', fontsize=16)\n",
+        "plt.ylabel('Scores', fontsize=12)\n",
+        "plt.grid(axis='y', linestyle='--', alpha=0.5)\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "3d82ea0c",
+      "metadata": {},
+      "source": [
+        "##### Using Pygal:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "97fcf2d2",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import pygal\n",
+        "\n",
+        "box_plot = pygal.Box()\n",
+        "box_plot.title = 'Exam Scores Distribution'\n",
+        "\n",
+        "box_plot.add('Math', [45, 60, 75, 85, 95])\n",
+        "box_plot.add('Science', [50, 65, 70, 80, 90])\n",
+        "box_plot.add('History', [40, 55, 65, 75, 85])\n",
+        "\n",
+        "box_plot.render_to_file('box_plot.svg')"
+      ]
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python (Pyodide)",
+      "display_name": "Python 3",
       "language": "python",
-      "name": "python"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
@@ -329,7 +641,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8"
+      "version": "3.13.1"
     }
   },
   "nbformat": 4,
