--- a/posts/visualisation.ipynb
+++ b/posts/visualisation.ipynb
@@ -25,8 +25,8 @@
       ]
     },
     {
-      "cell_type": "raw",
-      "id": "66b27f5b-a98c-40fc-835f-15a063c66217",
+      "cell_type": "markdown",
+      "id": "56ea69f0",
       "metadata": {},
       "source": [
         "Pygal is an open source user friendly Python Library that enables highly customizable SVG(Scalable Vector Graphics) charts. With it, you can generate charts that are perfect for web applications, reports and presentations. It integrates well with frameworks like FLash and Django and its output visualization is quick and elegant."
@@ -558,7 +558,18 @@
       "execution_count": null,
       "id": "caf09d74",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mRunning cells with 'Python 3.13.1' requires the ipykernel package.\n",
+            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+            "\u001b[1;31mCommand: 'c:/Users/admin/AppData/Local/Programs/Python/Python313/python3.13t.exe -m pip install ipykernel -U --user --force-reinstall'"
+          ]
+        }
+      ],
       "source": [
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -611,6 +622,14 @@
         "box_plot.add('History', [40, 55, 65, 75, 85])\n",
         "\n",
         "box_plot.render_to_file('box_plot.svg')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "49370ce4",
+      "metadata": {},
+      "source": [
+        "Pygal is an excellent choice for Python developers seeking quick, interactive, and visually appealing data visualizations. Its SVG output ensures charts look sharp at any size, making them perfect for both web and print. The simplicity of its API combined with a variety of chart types allows you to present data in the most effective and engaging way."
       ]
     }
   ],
