--- a/posts/visualisation2.ipynb
+++ b/posts/visualisation2.ipynb
@@ -60,32 +60,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 1,
-      "id": "9e11f904",
+      "cell_type": "raw",
+      "id": "b011dd5a",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9e11f904",
-        "outputId": "fddc7039-8cbe-43f3-93c5-49a483d17f32"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Collecting pygal\n",
-            "  Downloading pygal-3.0.5-py3-none-any.whl.metadata (3.5 kB)\n",
-            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.11/dist-packages (from pygal) (8.6.1)\n",
-            "Requirement already satisfied: zipp>=3.20 in /usr/local/lib/python3.11/dist-packages (from importlib-metadata->pygal) (3.21.0)\n",
-            "Downloading pygal-3.0.5-py3-none-any.whl (129 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m129.5/129.5 kB\u001b[0m \u001b[31m1.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: pygal\n",
-            "Successfully installed pygal-3.0.5\n"
-          ]
+        "vscode": {
+          "languageId": "raw"
         }
-      ],
+      },
       "source": [
         "! pip install pygal"
       ]
@@ -115,84 +96,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
-      "id": "67766ddc",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "67766ddc",
-        "outputId": "541de6ee-35a5-49bb-ba00-530219db4826"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: ipython in /usr/local/lib/python3.11/dist-packages (7.34.0)\n",
-            "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.11/dist-packages (from ipython) (75.1.0)\n",
-            "Collecting jedi>=0.16 (from ipython)\n",
-            "  Downloading jedi-0.19.2-py2.py3-none-any.whl.metadata (22 kB)\n",
-            "Requirement already satisfied: decorator in /usr/local/lib/python3.11/dist-packages (from ipython) (4.4.2)\n",
-            "Requirement already satisfied: pickleshare in /usr/local/lib/python3.11/dist-packages (from ipython) (0.7.5)\n",
-            "Requirement already satisfied: traitlets>=4.2 in /usr/local/lib/python3.11/dist-packages (from ipython) (5.7.1)\n",
-            "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in /usr/local/lib/python3.11/dist-packages (from ipython) (3.0.50)\n",
-            "Requirement already satisfied: pygments in /usr/local/lib/python3.11/dist-packages (from ipython) (2.18.0)\n",
-            "Requirement already satisfied: backcall in /usr/local/lib/python3.11/dist-packages (from ipython) (0.2.0)\n",
-            "Requirement already satisfied: matplotlib-inline in /usr/local/lib/python3.11/dist-packages (from ipython) (0.1.7)\n",
-            "Requirement already satisfied: pexpect>4.3 in /usr/local/lib/python3.11/dist-packages (from ipython) (4.9.0)\n",
-            "Requirement already satisfied: parso<0.9.0,>=0.8.4 in /usr/local/lib/python3.11/dist-packages (from jedi>=0.16->ipython) (0.8.4)\n",
-            "Requirement already satisfied: ptyprocess>=0.5 in /usr/local/lib/python3.11/dist-packages (from pexpect>4.3->ipython) (0.7.0)\n",
-            "Requirement already satisfied: wcwidth in /usr/local/lib/python3.11/dist-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython) (0.2.13)\n",
-            "Downloading jedi-0.19.2-py2.py3-none-any.whl (1.6 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m18.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: jedi\n",
-            "Successfully installed jedi-0.19.2\n"
-          ]
-        }
-      ],
+      "execution_count": null,
+      "id": "0dfa1211",
+      "metadata": {},
+      "outputs": [],
       "source": [
         "! pip install ipython"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
-      "id": "e31f0fed",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "e31f0fed",
-        "outputId": "b3a55177-2ab5-42c4-a2e5-228cb8566ba0"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Collecting cairosvg\n",
-            "  Downloading CairoSVG-2.7.1-py3-none-any.whl.metadata (2.7 kB)\n",
-            "Collecting cairocffi (from cairosvg)\n",
-            "  Downloading cairocffi-1.7.1-py3-none-any.whl.metadata (3.3 kB)\n",
-            "Collecting cssselect2 (from cairosvg)\n",
-            "  Downloading cssselect2-0.7.0-py3-none-any.whl.metadata (2.9 kB)\n",
-            "Requirement already satisfied: defusedxml in /usr/local/lib/python3.11/dist-packages (from cairosvg) (0.7.1)\n",
-            "Requirement already satisfied: pillow in /usr/local/lib/python3.11/dist-packages (from cairosvg) (11.1.0)\n",
-            "Requirement already satisfied: tinycss2 in /usr/local/lib/python3.11/dist-packages (from cairosvg) (1.4.0)\n",
-            "Requirement already satisfied: cffi>=1.1.0 in /usr/local/lib/python3.11/dist-packages (from cairocffi->cairosvg) (1.17.1)\n",
-            "Requirement already satisfied: webencodings in /usr/local/lib/python3.11/dist-packages (from cssselect2->cairosvg) (0.5.1)\n",
-            "Requirement already satisfied: pycparser in /usr/local/lib/python3.11/dist-packages (from cffi>=1.1.0->cairocffi->cairosvg) (2.22)\n",
-            "Downloading CairoSVG-2.7.1-py3-none-any.whl (43 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m43.2/43.2 kB\u001b[0m \u001b[31m1.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading cairocffi-1.7.1-py3-none-any.whl (75 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.6/75.6 kB\u001b[0m \u001b[31m3.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading cssselect2-0.7.0-py3-none-any.whl (15 kB)\n",
-            "Installing collected packages: cssselect2, cairocffi, cairosvg\n",
-            "Successfully installed cairocffi-1.7.1 cairosvg-2.7.1 cssselect2-0.7.0\n"
-          ]
-        }
-      ],
+      "execution_count": null,
+      "id": "e9ab0399",
+      "metadata": {},
+      "outputs": [],
       "source": [
         "! pip install cairosvg"
       ]
