--- a/posts/visualisation3.ipynb
+++ b/posts/visualisation3.ipynb
@@ -987,6 +987,42 @@
       "source": [
         "Pygal is an excellent choice for Python developers seeking quick, interactive, and visually appealing data visualizations. Its SVG output ensures charts look sharp at any size, making them perfect for both web and print. The simplicity of its API combined with a variety of chart types allows you to present data in the most effective and engaging way."
       ]
+    },
+    {
+      "cell_type": "raw",
+      "id": "d3031674",
+      "metadata": {
+        "vscode": {
+          "languageId": "raw"
+        }
+      },
+      "source": [
+        "**REFERENCES and FURTHER READINGS**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "c8f3d07f",
+      "metadata": {},
+      "source": [
+        "<strong>Official Documentation: </strong><br>\n",
+        "<a href=\"https://www.pygal.org/en/3.0.0/documentation/index.html\" target=\"_blank\">\n",
+        "https://www.pygal.org/en/3.0.0/documentation/index.html\n",
+        "</a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "7f37c0a0",
+      "metadata": {},
+      "source": [
+        "<strong>Other references: </strong><br>\n",
+        "1) <a href=\"https://www.analyticsvidhya.com/blog/2022/04/a-comprehensive-guide-on-pygal-the-next-generation-data-visualization-library-in-python/\" target=\"_blank\">\n",
+        "https://www.analyticsvidhya.com/blog/2022/04/a-comprehensive-guide-on-pygal-the-next-generation-data-visualization-library-in-python/\" target=\"_blank\n",
+        "</a>\n",
+        " 2) <a href=\"https://www.geeksforgeeks.org/data-visualization-with-pygal/\" target=\"_blank\">\n",
+        "  https://www.geeksforgeeks.org/data-visualization-with-pygal/</a> <br>"
+      ]
     }
   ],
   "metadata": {
