--- a/index.qmd
+++ b/index.qmd
@@ -20,10 +20,13 @@ Data visualization is an essential part of understanding and presenting data eff
 
 
 <video controls width="80%">
-  <source src="media/WhatsApp Video 2025-02-23 at 23.24.45.mp4" type="video/mp4">
+  <source src="media\WhatsApp Video 2025-02-25 at 21.23.03_d2ad1580.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 </center>
 
 Learn More on our *Blog*
 
+Visit our *[You Tube](https://youtu.be/FGJ5Xf1AY7E)*
+
+Also Visit our *[GitHub](https://github.com/khushal191/pygal-PSDV.git)*
